--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,12 @@ services:
     ports:
       - "80:80"
     volumes:
+      - ./php/src:/php/src
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - go-service
+      - php-service
     networks:
       - local
 
@@ -26,5 +28,18 @@ services:
     restart: always
     ports:
       - "8000"
+    networks:
+      - local
+
+  php-service:
+    build:
+      context: .
+      dockerfile: php.dockerfile
+    container_name: php-service
+    restart: always
+    volumes:
+      - ./php/src:/php/src
+    ports:
+      - "9000:9000"
     networks:
       - local
