--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,17 +3,28 @@ server {
     server_name localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www;
 
     client_max_body_size 50M;
 
-    location / {
-      index index.html;
-    }
-
-    location /api/ {
+    location /go/ {
       proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header Host $http_host;
       proxy_pass http://go-service:8000/;
+    }
+
+    location /php {
+      alias /php/src;
+      try_files $uri $uri/ /index.php?$query_string;
+      index index.html index.htm index.php;
+
+      location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php-service:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $request_filename;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+      }
     }
 }
