--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,14 +6,14 @@ server {
 
     client_max_body_size 50M;
 
-    location /go/ {
+    location /api/ {
       proxy_set_header X-Forwarded-For $remote_addr;
       proxy_set_header Host $http_host;
       proxy_pass http://go-service:8000/;
     }
 
-    location /php {
-      alias /php/src;
+    location /extension {
+      alias /var/www/html;
       try_files $uri $uri/ /index.php?$query_string;
       index index.html index.htm index.php;
 
