--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,17 +14,18 @@ server {
 
     location /extension {
       alias /var/www/html;
-      try_files $uri $uri/ /index.php?$query_string;
-      index index.html index.htm index.php;
+      try_files $uri $uri/ @extension;
+      index index.php;
 
       location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-service:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
+        include fastcgi.conf;
         fastcgi_param SCRIPT_FILENAME $request_filename;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_pass php-service:9000;
       }
     }
+
+    location @extension {
+      rewrite /extension/(.*)$ /extension/index.php?/$1 last;
+    }
+
 }
