--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,6 +12,12 @@ server {
       proxy_pass http://go-service:8000/;
     }
 
+    location /ocr/ {
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $http_host;
+        proxy_pass http://flask-service:8001/;
+    }
+
     location /extension {
       alias /var/www/html;
       try_files $uri $uri/ @extension;
@@ -27,5 +33,4 @@ server {
     location @extension {
       rewrite /extension/(.*)$ /extension/index.php?/$1 last;
     }
-
 }
